--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>プロフィールページ</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css">
     <style>
         body {
             padding-top: 50px;
@@ -18,6 +18,22 @@
         .starter-template {
             padding: 40px 40px;
             background-color: white;
+        }
+
+        .color-talk {
+            color: lightseagreen;
+        }
+
+        .color-wrench {
+            color: steelblue;
+        }
+
+        .color-heart {
+            color: plum;
+        }
+
+        .icon-size {
+            font-size: 200%;
         }
     </style>
 </head>
@@ -47,9 +63,35 @@
     <div class="container">
         <div class="starter-template">
             <h1>タイトル</h1>
-            <p class="lead">世界の皆さん、こんにちは。</p>
+            <p class="lead">世界の皆さん、こんにちは。 </p>
+
+            <div class="row text-center">
+                <h2 id="works">見かけによらず、個性的でチャーミング！！</h2>
+                <div class="col-sm-4">
+                    <h3 class="color-talk"><span class="glyphicon glyphicon-volume-up icon-size"></span><br>しゃべる</h3>
+                    <p>コミュニケーション能力が高く、<br>日本語と英語に加えて、<br>６カ国語を流暢に操ります。</p>
+                </div>
+                <div class="col-sm-4">
+                    <h3 class="color-wrench"><span class="glyphicon glyphicon-wrench icon-size"></span><br>つくる</h3>
+                    <p>優れた開発能力と豊富な経験を持ち、<br>世界的なOSSプロジェクトに<br>多数の貢献をしています。</p>
+                </div>
+                <div class="col-sm-4">
+                    <h3 class="color-heart"><span class="glyphicon glyphicon-heart icon-size"></span><br>いやす</h3>
+                    <p>デスマーチで荒んだ、<br>みんなの心を和ませる、<br>癒し系ゆるキャラです。</p>
+                </div>
+            </div>
+            <hr>
+
             <h2 id="works">Works</h2>
-            <p>説明文：あいうえおあいうえおあいうえお</p>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3>猫パンチ - ネコ用UI/UXライブラリ</h3>
+                    <p>ツメや肉球でも操作できる、ネコのためのTouchインターフェースライブラリです。かつお節やマタタビなど、ネコ用アイコンも多数装備。マウスでは気が散ってしまうネコの労働生産性を向上させます。</p>
+                </div>
+                <div class="col-sm-6">
+                    <img src="https://paiza-webapp.s3.amazonaws.com/files/learning/portfolio/work1.png" class="img-responsive">
+                </div>
+            </div>
             <hr>
             <h2 id="skills">Skills</h2>
             <p>説明文：あいうえおあいうえおあいうえお</p>
