--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>プロフィールページ</title>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css">
+    <title>ポートフォリオページ</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/3.4.1/yeti/bootstrap.min.css" integrity="sha384-bbfChtM4oMxTlcWghl4L4ja4z3qqkTUYpXACeFtB2WUoy2Swi5ucq+AyhOjMUKM1" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css">-->
     <style>
         body {
             padding-top: 50px;
-            background-color: lightgray;
         }
 
         .starter-template {
             padding: 40px 40px;
-            background-color: white;
         }
 
         .color-talk {
@@ -32,6 +30,10 @@
             color: plum;
         }
 
+        .color-red{
+          color: red;
+        }
+
         .icon-size {
             font-size: 200%;
         }
@@ -43,18 +45,18 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">ネコ先生のページ</span>
+                    <span class="sr-only">ページ</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project Nyaan</a>
+                <a class="navbar-brand" href="#">portfolio</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#works">Works</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <!--<li class="active"><a href="#">Home</a></li>-->
+                    <li><a href="#works">操作方法</a></li>
+                    <li><a href="#lists"><s>作品</s></a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -62,41 +64,29 @@
     </nav>
     <div class="container">
         <div class="starter-template">
-            <h1>タイトル</h1>
-            <p class="lead">世界の皆さん、こんにちは。 </p>
+            <h1 class="color-red">シャンパーン</h1>
+            <p class="lead">連打で簡単!!爽快ゲーム</p>
 
             <div class="row text-center">
-                <h2 id="works">見かけによらず、個性的でチャーミング！！</h2>
-                <div class="col-sm-4">
-                    <h3 class="color-talk"><span class="glyphicon glyphicon-volume-up icon-size"></span><br>しゃべる</h3>
-                    <p>コミュニケーション能力が高く、<br>日本語と英語に加えて、<br>６カ国語を流暢に操ります。</p>
+                <h2 id="works">操作方法</h2>
+                <div class="col-sm-6">
+                    <h3 class="color-talk"><br>振る</h3>
+                    <p>'A'と'D'を交互に連打して<br>シャンパンを振る</p>
                 </div>
-                <div class="col-sm-4">
-                    <h3 class="color-wrench"><span class="glyphicon glyphicon-wrench icon-size"></span><br>つくる</h3>
-                    <p>優れた開発能力と豊富な経験を持ち、<br>世界的なOSSプロジェクトに<br>多数の貢献をしています。</p>
+                <div class="col-sm-6">
+                    <h3 class="color-wrench"><br>飛ばす</h3>
+                    <p>栓を開けて高く飛ばす</p>
                 </div>
-                <div class="col-sm-4">
-                    <h3 class="color-heart"><span class="glyphicon glyphicon-heart icon-size"></span><br>いやす</h3>
-                    <p>デスマーチで荒んだ、<br>みんなの心を和ませる、<br>癒し系ゆるキャラです。</p>
+                <div class="col-sm-12">
+                    <p>シャンパンを振って開けた栓の飛んだ距離を競う</p>
                 </div>
             </div>
             <hr>
-
-            <h2 id="works">Works</h2>
-            <div class="row">
-                <div class="col-sm-6">
-                    <h3>猫パンチ - ネコ用UI/UXライブラリ</h3>
-                    <p>ツメや肉球でも操作できる、ネコのためのTouchインターフェースライブラリです。かつお節やマタタビなど、ネコ用アイコンも多数装備。マウスでは気が散ってしまうネコの労働生産性を向上させます。</p>
-                </div>
-                <div class="col-sm-6">
-                    <img src="https://paiza-webapp.s3.amazonaws.com/files/learning/portfolio/work1.png" class="img-responsive">
-                </div>
+            <div class="game-list">
+                <h2 id="lists">作品</h2>
+                <p>制作していないので作品はありません</p>
             </div>
             <hr>
-            <h2 id="skills">Skills</h2>
-            <p>説明文：あいうえおあいうえおあいうえお</p>
-            <div class="row starter-template">
-            <a class="btn btn-primary" href="#">Topに戻る</a>
         </div>
     </div>
     <!-- /.container -->
