画像を追加

--- a/index.html
+++ b/index.html
@@ -70,15 +70,18 @@
             <div class="row text-center">
                 <h2 id="works">操作方法</h2>
                 <div class="col-sm-6">
+                    <img src="./images/0210_01.png" alt="" width="210">
                     <h3 class="color-talk"><br>振る</h3>
                     <p>'A'と'D'を交互に連打して<br>シャンパンを振る</p>
                 </div>
                 <div class="col-sm-6">
+                    <img src="./images/0210_02.png" alt="" width="210">
                     <h3 class="color-wrench"><br>飛ばす</h3>
-                    <p>栓を開けて高く飛ばす</p>
+                    <p>栓を開けてどこまでも高く飛ばす</p>
                 </div>
                 <div class="col-sm-12">
                     <p>シャンパンを振って開けた栓の飛んだ距離を競う</p>
+                    <p>※イラストはイメージです。</p>
                 </div>
             </div>
             <hr>
